--- a/KSBaoCuong2/KSBaoCuong2.csproj
+++ b/KSBaoCuong2/KSBaoCuong2.csproj
@@ -128,6 +128,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\bangan.jpg" />
     <Content Include="Content\bootstrap-grid.css" />
     <Content Include="Content\bootstrap-grid.min.css" />
     <Content Include="Content\bootstrap-grid.rtl.css" />
@@ -146,9 +147,15 @@
     <Content Include="Content\bootstrap.rtl.min.css" />
     <Content Include="Content\DangKy.css" />
     <Content Include="Content\DangNhap.css" />
+    <Content Include="Content\DatPhong.css" />
     <Content Include="Content\DSPhong.css" />
+    <Content Include="Content\hoboi.jpg" />
     <Content Include="Content\LayOut.css" />
     <Content Include="Content\nendndk.jpg" />
+    <Content Include="Content\pexels-pixabay-258154.jpg" />
+    <Content Include="Content\phong.jpg" />
+    <Content Include="Content\TrangChu.css" />
+    <Content Include="Content\XoaPhong.css" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
@@ -160,6 +167,7 @@
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
+    <Content Include="Scripts\DatPhong.js" />
     <Content Include="Scripts\DSPhong.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
@@ -194,10 +202,9 @@
     <Content Include="Views\Main\DangNhap.cshtml" />
     <Content Include="Views\Main\LayOut.cshtml" />
     <Content Include="Views\Main\DSPhong.cshtml" />
-    <Content Include="Views\Main\DSPhong2.cshtml" />
-    <Content Include="Views\Main\DSPhong3.cshtml" />
-    <Content Include="Views\Main\DSPhong4.cshtml" />
-    <Content Include="Views\Main\DSPhong5.cshtml" />
+    <Content Include="Views\Main\Datphong.cshtml" />
+    <Content Include="Views\Main\XoaPhong.cshtml" />
+    <Content Include="Views\Main\TrangChu.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
