--- a/KSBaoCuong2/KSBaoCuong2.csproj
+++ b/KSBaoCuong2/KSBaoCuong2.csproj
@@ -154,6 +154,7 @@
     <Content Include="Content\nendndk.jpg" />
     <Content Include="Content\pexels-pixabay-258154.jpg" />
     <Content Include="Content\phong.jpg" />
+    <Content Include="Content\ThongTin.css" />
     <Content Include="Content\TrangChu.css" />
     <Content Include="Content\XoaPhong.css" />
     <Content Include="favicon.ico" />
@@ -205,6 +206,7 @@
     <Content Include="Views\Main\Datphong.cshtml" />
     <Content Include="Views\Main\XoaPhong.cshtml" />
     <Content Include="Views\Main\TrangChu.cshtml" />
+    <Content Include="Views\Main\ThongTin.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
