--- a/KSBaoCuong2/KSBaoCuong2.csproj
+++ b/KSBaoCuong2/KSBaoCuong2.csproj
@@ -155,6 +155,7 @@
     <Content Include="Content\pexels-pixabay-258154.jpg" />
     <Content Include="Content\phong.jpg" />
     <Content Include="Content\ThongTin.css" />
+    <Content Include="Content\thongtinbackgrou.jpg" />
     <Content Include="Content\TrangChu.css" />
     <Content Include="Content\XoaPhong.css" />
     <Content Include="favicon.ico" />
